# ChromarFM

./: .gitignore  LICENSE  PlotUtils.hs  README.md  RootExp.hs  fmChromar.cabal  runPlant.sh  stack.yaml
Plant/: Agent.hs  Env.hs  EnvT.hs  Params.hs  Photo.hs  Plant.hs  PlantL.hs
app/: Analysis.hs  AnalysisEvents.hs  ClusterAnalysis.hs  Env.hs  Main.hs  Main.hs~  MainFM.hs  MainGLab.hs  MainL.hs  MainLS.hs  Params.hs  Photo.hs  Plant.hs  Types.hs  Utils.hs  expAnalysis1.ipynb  lifecyclesHalle.ipynb  lifecyclesNorwich.ipynb  lifecyclesOulu.ipynb  lifecyclesVal_hourly.ipynb  lifecyclesValencia.ipynb  radial.R
soilWater/data/: d2m_201601.nc  ssr_201601.nc  t2m_201601.nc  tp_201601.nc
soilWater/src/: dataIntegration.r  experiments.r  getWeather.py  processWeather.r  soilModel.r
