name:                fmChromar
version:             0.1.0.0
author:              Argyris Zardilis
maintainer:          azardilis@gmail.com
copyright:           2017 Argyris Zardilis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
       build-depends:base,
                     random >=1.1 && <1.2,
                     text >= 1.2,
                     containers >=0.5,
                     coloured-petri-nets,
                     normaldistribution >= 1.1,
                     multiset >= 0.3,
                     colour >= 2.3,
                     lens >= 4.0,
                     data-default-class,
                     time,
                     mtl,
                     set-monad
    hs-source-dirs: Plant

    exposed-modules: Agent
                     Env
                     Photo
                     Params
                     PlantL
                     Plant
                     EnvT
		      
executable fmLife
  hs-source-dirs:      app
  main-is:             MainLS.hs
  other-modules:       Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:     base,
                     random >=1.1 && <1.2,
                     text >= 1.2,
                     Chart,
                     Chart-cairo,
                     Chart-diagrams,     
                     containers >=0.5,
                     coloured-petri-nets,
                     normaldistribution >= 1.1,
                     multiset >= 0.3,
                     colour >= 2.3,
                     lens >= 4.0,
                     data-default-class,
                     time,
                     fmChromar,
                     mtl,
                     cassava,
                     vector,
                     bytestring,
                     set-monad,
                     split,
                     filepath,
                     hierarchical-clustering,
                     kmeans-vector
  default-language:    Haskell2010

executable fmLiteGreen
  hs-source-dirs: app
  main-is:  MainGLab.hs
  other-modules: Utils
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends: base,
                 coloured-petri-nets,
                 fmChromar,
                 lens >= 4.0,
                 colour >= 2.3,
                 data-default-class,	
                 random >=1.1 && <1.2,	
                 Chart,
                 Chart-cairo
